# enterprise_agent

./: .dockerignore  .env.bak  .env.example  .gitignore  Makefile  README.md  docker-compose.ones-mock.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: Dockerfile  README.md
backend/app/: __init__.py  bootstrap.py  internal_api_platform.py  local_internal_api_platform.py  main.py  mock_internal_api_platform.py  mock_ones_api.py
backend/config/: internal_platform_topology.example.yaml
backend/docker/: setup_oracle_client.sh
backend/migrations/: 001_initial_agent.sql  002_configuration.sql  003_channel_delivery.sql  004_platform_config_and_workflow.sql  005_platform_secrets_and_runtime_config.sql  006_continuous_conversation_attachments.sql  007_unified_identity_rbac_agents.sql  008_webhook_agent_triggers.sql  009_admin_web_read_models.sql  009_agent_job_retry_failure_delivery.sql  010_business_application_control_plane.sql
backend/tests/: conftest.py  (+43 more)
docs/: admin-web-migration-baseline.md  admin-web-mvp.md  admin-web-shadcn-scaffold.md  agent-retry-failure-delivery.md  agent-test-data.md  business-application-control-plane-baseline.md  business-application-control-plane.md  compose-postgres18-rabbitmq4-upgrade.md  compose-postgres18-rabbitmq4-verification.md  continuous-multimodal-conversations.md  db-backed-config-compose-smoke.md  db-backed-platform-config-runtime-test.md  feature-configuration-migration.md  internal-api-platform.md  local-tools-loki-test.md  ones-api-mock.md  platform-config-api.md  real-tools-loki-diagnostics-test.md  unified-identity-rbac-admin.md  web-managed-secrets-and-env-config.md  webhook-agent-triggers.md
frontend/: Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  turbo.json  vite.config.ts  vitest.config.ts
openspec/: config.yaml
scripts/: agent_test_data.sh  compose_infra_upgrade.sh  smoke_db_backed_config.sh  smoke_rabbitmq4.sh
(+576 files in other folders)
