[project]
name = "enterprise-agent"
version = "0.1.0"
description = "Read-only enterprise diagnostic agent MVP"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "psycopg[binary]>=3.2",
  "pika>=1.3",
  "anthropic>=0.40",
  "claude-agent-sdk>=0.1.0",
  "cryptography>=42.0",
  "dingtalk-stream>=0.24.3",
  "pyyaml>=6.0",
  "sqlglot>=25",
  "boto3>=1.35",
  "python-docx>=1.1",
  "openpyxl>=3.1",
  "python-pptx>=1.0",
  "Pillow>=10.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.10",
]
# Database drivers for the internal API platform's multi-dialect gateway.
# Optional so the base image stays slim; install where real DB access is needed.
database = [
  "pymysql>=1.1",
  "pymssql>=2.3",
  "oracledb>=2.2",
  "redis>=5.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
  "integration: opt-in tests that require external runtimes or credentials",
]
